--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".data.ui.SearchActivity"></activity>
+        <activity android:name=".data.ui.SearchActivity" />
+        <activity android:name=".data.ui.LoginActivity"></activity>
     </application>
 
 </manifest>
