--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
+    signingConfigs {}
+    buildTypes {}
 }
 
 dependencies {
@@ -27,4 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+
 }
