search activity changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".data.ui.MainActivity">
-
-        </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".data.ui.SearchActivity" />
-        <activity android:name=".data.ui.LoginActivity" />
-        <activity android:name=".data.ui.Main1Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="data.ui.LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".data.ui.SearchActivity" >
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".data.ui.LoginActivity" />
+        <activity android:name=".data.ui.Main1Activity"></activity>
+        <activity android:name=".data.ui.RegisterActivity" />
     </application>
 
 </manifest>
