--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.volley:volley:1.0.0'
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    compile 'com.google.code.gson:gson:2.6.2'
 
 }
