--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -24,18 +25,27 @@
         <activity
             android:name="data.ui.LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".data.ui.SearchActivity" >
-            <meta-data android:name="android.app.searchable"
+        <activity android:name=".data.ui.SearchActivity">
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
 
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
         </activity>
         <activity android:name=".data.ui.LoginActivity" />
-        <activity android:name=".data.ui.Main1Activity"></activity>
+        <activity android:name=".data.ui.Main1Activity" />
         <activity android:name=".data.ui.RegisterActivity" />
+        <activity android:name=".data.ui.ReportActivity" />
+
+        <service
+            android:name=".data.control.BackgroundService"
+            android:exported="false" />
+        <service
+            android:name=".data.control.MyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
